compiler/typ/tests/fixtures/diagnostics/0049_core_plus_bool_05.ml.infer.expected
File "0049_core_plus_bool_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0049_core_plus_bool_05 is not a valid module name.

File "0049_core_plus_bool_05.ml", line 2, characters 30-34:
2 | let _ = let shadow = 4 in 1 + true
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
